chore: regenerate SQL validation client
